--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
 
         <img class="me" src="me.png" />
         <div class="about">
-          <p>Hello, I am Andrew Daily and i am a Absolet Software Enginer</p>
+          <p>Hello, I am Andrew Daily and im an aspiring Software Enginer</p>
           <p>i also have done Game Develpment</p>
         </div>
       </div>
+    </nav>
+
+    <nav>
+      <h2>Projects</h2>
+      <hr>
+      <p>projecets i have worked on are a persinal fitness tracker</p>
+      <img class="pro1" src="project1.png">
+      <p>this tracks the sets, reps, and weight used and what exercise you did</p>
     </nav>
   </body>
 </html>
